--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-     <h1>digital way</h1>
-     <h2>learn how to conect vs code></h2>
+    <h1> helo jitendra </h1>
+    <h2> learn how to cannect vs code to git hub</h2>
+</body>
+</html>
