--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> helo jitendra </h1>
+    <h1> helo jiten</h1>
     <h2> learn how to cannect vs code to git hub</h2>
 </body>
 </html>
