--- a/index.html
+++ b/index.html
@@ -3,62 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/0fad00d454.js" crossorigin="anonymous"></script>
+    <title>web</title>
 </head>
 <body>
-    <div class="container">
-    <nav>
-        <a href="#">Techshows</a>
-        <div class="navbar">
-            <ul>
-                <li> <a href="#"> Home </a></li>
-                <li> <a href="#"> Services </a></li>
-                <li> <a href="#"> Custumer </a></li>
-                <li> <a href="#"> Contact </a></li>
-            </ul>
-            </div>
-        </nav>
-        <div class="main-banner">
-            <img src="Dev_team.png" alt="banner">
-        </div>
-        <section class="service">
-            <h1>Services</h1>
-            <div class="col">
-                <i class="fab fa-algolia fa-3x ip"></i>
-                <h3>Web Disigning</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, iure.</p>
-                <a href="#"> know more</a>
-            </div>
-            <div class="col">
-                <i class="fas fa-american-sign-language-interpreting"></i>
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, iure.</p>
-                <a href="#"> know more</a>
-            </div>
-            <div class="col">
-                <i class="fab fa-android fa-3x ip"></i>
-                <h3>Androide</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, iure.</p>
-                <a href="#"> know more</a>
-            </div>
-        </section>
-        <section class="customer">
-            <h1>Our Customer</h1>
-            <img src="1904638.jpg" alt="customer">
-            <img src="Shirley-Setia-HD-Wallpapers-42050.jpg" alt="customer">
-            <img src="20200520_030756.jpg" alt="customer">
+        <div class="wrapper">
+            <header class="header">
+                <h1>Car Shows</h1>
+            </header>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Food</a>
+                    <li><a href="#">Adobt</a>
+                    <li><a href="#">Contact Us</a></li>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, provident?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum unde esse quisquam, error voluptas tenetur molestiae soluta amet doloribus aperiam deserunt consectetur mollitia numquam, excepturi eum, autem commodi sunt beatae?
-            </p>
-            <a href="#">More</a>
-        </section>
-        <footer>
-            <small>Copyright &copy; 2020 || Disigned by Jitendra Dharmesh</small>
-        </footer>
-    </div>
-</div>
+                </ul>
+            </nav>
+            <div class="container">
+                <div class="content">
+                    <img src="636353687510047376OV.jpg" alt="">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore fuga minima praesentium eveniet magni vel ipsum nisi maxime, officia eaque culpa iste explicabo nam dolores assumenda incidunt corporis commodi dolor. Amet, impedit ad assumenda corporis quae beatae vero nostrum officiis esse quia quasi similique possimus quis ratione neque obcaecati non.
+                </div>
+                <aside class="right-sidebar">
+                    <h1>About Us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.ugit repellat illum minima iste, laboriosam labore. Deserunt accusantium, cumque non eum sequi, autem nesciunt veritatis, quidem culpa officiis ipsa voluptatibus veniam maiores vitae minima nemo fugiat at eius! Repellat labore fugiat, sequi incidunt totam quis facere culpa sit quia maiores inventore nostrum nemo ratione sint dignissimos in, id cum, minus sapiente qui nobis ex rerum iure provident. Saepe minus quisquam repellendus consequatur quibusdam esse architecto. Saepe odit aspernatur est omnis sed enim blanditiis velit autem aliquid? Autem, magnam? Tenetur deserunt nulla possimus iure delectus facere numquam dignissimos in doloremque eligendi, dolorem placeat est ab nesciunt voluptate.</p>
+                </aside>
+
+            </div>
+            <footer class="footer">copyright &copy; 2020 ||
+                Designed by Jitendra Dharmesh
+            </footer>
+        </div>
+
 </body>
 </html>
